# GitCat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: ci.yml  docs.yml  release.yml
design/: graph-shell-prototype.html
docs/: faq.md  features.md  index.md  install.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: DownloadButton.vue  custom.css  index.ts
e2e/: open-repo.spec.ts  tsconfig.json
e2e/fixtures/: tauriMock.ts  tempRepo.ts
public/tama/models/kirara/: README.md
scripts/: make-demo-repo.sh  profile.mjs  profile.sh  render-tama-portraits.mjs  tama-debug.html  tama-portrait.html
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: bisectcheck.rs  graphcheck.rs  m2check.rs  pickcheck.rs  safetycheck.rs
src-tauri/icons/: icon.icns
src-tauri/src/: askpass.rs  blame.rs  blocking.rs  code_search.rs  commands.rs  conflict.rs  dashboard.rs  file_history.rs  filter_repo.rs  fsck.rs  git_bisect.rs  git_config.rs  git_merge.rs  git_pick.rs  git_read.rs  git_rebase.rs  git_remote.rs  git_remote_manage.rs  git_revert.rs  git_tag.rs  git_write.rs  identity.rs  layout.rs  lib.rs  main.rs  menu.rs  model.rs  patch.rs  pickaxe.rs  plumbing.rs  procutil.rs  reflog.rs  repo_files.rs  repo_registry.rs  repo_summary.rs  rerere.rs  safety.rs  submodule.rs  terminal.rs  tool_settings.rs  (+5 more)
src-tauri/tests/: bisect.rs  blame.rs  branch_ops.rs  checkout_dirty_tree.rs  cherry_pick.rs  code_search.rs  dashboard.rs  file_history.rs  filter_repo.rs  fsck.rs  git_config.rs  git_revert.rs  git_tag.rs  graph.rs  identity.rs  merge.rs  patch.rs  perf_graph.rs  pickaxe.rs  plumbing.rs  rebase.rs  reflog.rs  remote_manage.rs  remote_ops.rs  repo_files.rs  repo_registry.rs  repo_summary.rs  rerere.rs  safety_prune.rs  safety_undo.rs  submodule.rs  tool_settings.rs  trust.rs  watch.rs  workdir.rs  wsl_live.rs
src-tauri/tests/common/: mod.rs
src/ipc/: bindings.ts  commands.ts  env.test.ts  env.ts  types.ts
src/islands/about/: About.svelte  about.svelte.ts
src/islands/applypatch/: applypatch.svelte.test.ts  applypatch.svelte.ts
src/islands/bisect/: Bisect.svelte  bisect.svelte.test.ts  bisect.svelte.ts
src/islands/bisectdrawer/: BisectDrawer.svelte  bisectdrawer.svelte.test.ts  bisectdrawer.svelte.ts
src/islands/blame/: Blame.svelte  blame.svelte.test.ts  blame.svelte.ts
src/islands/cmdk/: Cmdk.svelte  cmdk.svelte.test.ts  cmdk.svelte.ts
src/islands/codesearch/: CodeSearch.svelte  codesearch.svelte.test.ts  codesearch.svelte.ts
src/islands/commitmenu/: CommitMenu.svelte  commitmenu.svelte.test.ts  commitmenu.svelte.ts
src/islands/danglingrecovery/: DanglingRecovery.svelte  danglingrecovery.svelte.test.ts  danglingrecovery.svelte.ts
src/islands/dashboard/: Dashboard.svelte  dashboard.svelte.test.ts  dashboard.svelte.ts
src/islands/detail/: Detail.svelte  detail.svelte.test.ts  detail.svelte.ts
src/islands/exportpatches/: ExportPatches.svelte  exportpatches.svelte.test.ts  exportpatches.svelte.ts
src/islands/externaltools/: ExternalTools.svelte  externaltools.svelte.test.ts  externaltools.svelte.ts
src/islands/filehistory/: FileHistory.svelte  filehistory.svelte.test.ts  filehistory.svelte.ts
src/islands/filterrepo/: FilterRepo.svelte  filterrepo.svelte.test.ts  filterrepo.svelte.ts
src/islands/forcepush/: forcepush.svelte.test.ts  forcepush.svelte.ts
src/islands/multimerge/: MultiMerge.svelte  multimerge.svelte.test.ts  multimerge.svelte.ts
src/islands/openterminal/: openterminal.svelte.test.ts  openterminal.svelte.ts
src/islands/pickaxesearch/: PickaxeSearch.svelte  pickaxesearch.svelte.test.ts  pickaxesearch.svelte.ts
src/islands/plumbing/: Plumbing.svelte  plumbing.svelte.test.ts  plumbing.svelte.ts
src/islands/rebaseplan/: RebasePlan.svelte  rebaseplan.svelte.test.ts  rebaseplan.svelte.ts
src/islands/reflog/: Reflog.svelte  reflog.svelte.test.ts  reflog.svelte.ts
src/islands/remotes/: Remotes.svelte  remotes.svelte.test.ts  remotes.svelte.ts
src/islands/repofiles/: RepoFiles.svelte  repofiles.svelte.test.ts  repofiles.svelte.ts
src/islands/reposummary/: RepoSummary.svelte  reposummary.svelte.test.ts  reposummary.svelte.ts
src/islands/rerere/: Rerere.svelte  rerere.svelte.test.ts  rerere.svelte.ts
src/islands/resethead/: resethead.svelte.test.ts  resethead.svelte.ts
src/islands/resolver/: Resolver.svelte  resolver.svelte.test.ts  resolver.svelte.ts
src/islands/settings/: Settings.svelte  settings.svelte.test.ts  settings.svelte.ts
src/islands/setupwizard/: SetupWizard.svelte  setupwizard.svelte.test.ts  setupwizard.svelte.ts
src/islands/sidebar/: Sidebar.svelte  sidebar.svelte.test.ts  sidebar.svelte.ts
src/islands/snapshotpreview/: SnapshotPreview.svelte  snapshotpreview.svelte.test.ts  snapshotpreview.svelte.ts
src/islands/tamagallery/: TamaGallery.svelte  tamagallery.svelte.ts
src/islands/terminal/: Terminal.svelte  terminal.svelte.test.ts  terminal.svelte.ts
src/islands/updater/: updater.svelte.ts
src/islands/vimnav/: VimNav.svelte  vimnav.svelte.test.ts  vimnav.svelte.ts
src/islands/workdir/: Workdir.svelte  workdir.svelte.test.ts  workdir.svelte.ts
src/legacy/: bridge.ts  clipboard.test.ts  clipboard.ts  icons.ts  main.ts  ribbon.test.ts  ribbon.ts  sound.test.ts  sound.ts
src/tama/: actor.test.ts  actor.ts  debug-page.css  debug-page.ts  sprite-actor.test.ts  sprite-actor.ts  three-actor.ts  types.test.ts  types.ts
