[package]
name = "gitcat"
version = "0.8.0"
description = "A cozy, safety-first desktop Git client."
authors = ["Jiucheng Zang <git.jiucheng@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", default-features = false }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
notify-debouncer-mini = "0.7.0"
portable-pty = "0.9"
base64 = "0.22"

# Dev-only profiling/inspection (see run()'s own doc comment in lib.rs for
# the full rationale) — compiled in unconditionally like any other
# dependency, but only ever INITIALIZED behind #[cfg(debug_assertions)], so
# neither opens its diagnostic port nor adds tracing overhead in a release
# build. `tokio`'s "tracing" feature is what actually lets console-subscriber
# see task events at all — tauri's own async_runtime already runs on a real
# tokio::runtime::Runtime, so this unifies with (not duplicates) that.
tauri-plugin-devtools = "2.1.0"
console-subscriber = "0.5"
tokio = { version = "1", features = ["tracing"] }

# A separate profile for local flamegraph profiling (samply, WPA, etc. —
# see run()'s own doc comment in lib.rs for the profiling story this is
# part of), DELIBERATELY NOT added to [profile.release] itself:
# .github/workflows/release.yml's real release pipeline builds a 6-platform
# matrix that all share whatever [profile.release] says, and unlike
# Windows' MSVC toolchain (which always emits debug info as a SEPARATE .pdb
# next to the .exe, at zero cost to the shipped binary), Linux/macOS
# typically embed DWARF debug info directly IN the binary unless a
# platform-specific strip step runs — turning debug info on for every
# platform's real release artifact just to profile locally on one dev's
# Windows machine would have silently bloated 5 platforms' shipped
# installers for a benefit only this one has any use for. `cargo build
# --profile profiling` builds into target/profiling/ instead, fully
# isolated from anything release.yml touches.
[profile.profiling]
inherits = "release"
debug = true

